# Chess_Programm_Project_4

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
flake-report/: index.html  src.models.history.report.html  src.models.history.source.html  src.models.players.report.html  src.models.players.source.html
report_templates/: complete_tournament_report_template.html  player_list_report_template.html  selected_tournament_name_dates_report_template.html  selected_tournament_players_report_template.html  selected_tournament_rounds_matches_report_template.html  tournament_list_report_template.html  tournament_name_dates_report_template.html  tournament_participants_report_template.html  tournament_rounds_report_template.html
src/: __init__.py
src/controllers/: __init__.py  match_controller.py  pairings_generator.py  pairings_genrator.py  player_controller.py  players_controller.py  round_controller.py  settings.py  tournament_controller.py  tournament_pairing_service.py  tournament_persistence_service.py  view_contracts.py
src/exporters/: __init__.py  report_renderer.py  tournament_report_exporter.py
src/models/: __init__.py  history.py  matches.py  players.py  tournaments.py
src/views/: __init__.py  app.py  create_player_popup_view.py  create_round_popup_view.py  create_round_view.py  create_tournament_popup_view.py  label_frame.py  (+13 more)
tests/: conftest.py  test_pairing_generator_unit.py  test_player_controller_unit.py  test_player_model_unit.py  test_round_controller_unit.py  test_tournament_functionality.py  test_tournament_report_exporter.py
