[project]
name = "project-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "flake8>=7.3.0",
    "flake8-html>=0.4.3",
    "flake8-pyproject>=1.2.4",
    "jinja2>=3.1.6",
]


[tool.flake8]
# Max line set to 119 # Technical specs
max-line-length = 119
exclude = [
    # No need to traverse our git directory
    ".git",
    # Not my problem
    ".venv",
    # There's no value in checking cache directories
    "__pycache__"
]
# Use extend-ignore to add to already ignored checks which are anti-patterns like W503.
extend-ignore = [
    # PEP 8 recommends to treat : in slices as a binary operator with the lowest priority, and to leave an equal
    # amount of space on either side, except if a parameter is omitted (e.g. ham[1 + 1 :]).
    # This behaviour may raise E203 whitespace before ':' warnings in style guide enforcement tools like Flake8.
    # Since E203 is not PEP 8 compliant, we tell Flake8 to ignore this warning.
    # https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices    
    "E203"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
